--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "localstorage": "^1.0.1",
+    "localStorage": "^1.0.4",
     "mysql2": "^3.6.2",
     "node-localstorage": "^3.0.5",
     "nodemailer": "^6.9.7",
