--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "localstorage": "^1.0.1",
     "localStorage": "^1.0.4",
     "mysql2": "^3.6.2",
+    "nanoid": "^3.3.7",
     "node-localstorage": "^3.0.5",
     "nodemailer": "^6.9.7",
-    "sequelize": "^6.33.0"
+    "sequelize": "^6.33.0",
+    "uuid": "^9.0.1"
   }
 }
